clean up and make install docs on proxy consistent (#3595)
* replace outdated and obsolete content with a stub to provide
an entry point for links.
https://bugzilla.suse.com/show_bug.cgi?id=1235567
https://github.com/SUSE/spacewalk/issues/26181

* new snippet: register
* new snippet: actkey
* sl micro version with proxy 5.1
* sl micro version with proxy 5.1 (vm*)
* use uyuni-proxy-squid-cache consistently
* add proxy persistent storage

Co-authored-by: Ondřej Holeček <oholecek@suse.com>

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -1,5 +1,5 @@
 [[proxy-install-vmware]]
-= {productname} {productnumber} Proxy Deployment as a Virtual Machine - VMware
+= {productname} Proxy Deployment as a Virtual Machine - VMware
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -15,7 +15,7 @@ VMware will be used as a sandbox for this installation.
 
 [IMPORTANT]
 ====
-The preferred method for deploying {productname} {productnumber} Proxy is to use one of the following available images.
+The preferred method for deploying {productname} Proxy is to use one of the following available images.
 All tools are included in these images greatly simplifying deployment.
 ====
 
@@ -25,12 +25,12 @@ Images for {productname} {productnumber} Proxy are available at link:https://www
 ====
 For more information on preparing raw images, see:
 
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-images-procedure[]
+* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#sec-raw-preparation[]
+* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#cha-images-procedure[]
 
 For additional information on the self install images, see:
 
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-selfinstal-procedure[]
+* link:https://documentation.suse.com/en-us/sl-micro/6.1/single-html/SL-Micro-deployment/#cha-selfinstal-procedure[]
 ====
 
 // FIXME more archs supported?
@@ -76,100 +76,10 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 
 
-[[minimal.susemgrproxy.prep]]
-== Register {sle-micro} and {productname} {productnumber} Proxy
-
-// Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
-
-.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
-. Boot the virtual machine.
-. Log in as `root`.
-. Register {sle-micro} with SCC.
-+
-
-----
-transactional-update register -r <REGCODE> -e <your_email>
-----
-
-. Reboot.
-
-. Register {productname} {productnumber} Proxy with {scclongform}.
-+
-
-----
-transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
-----
-
-. Reboot.
-
-. Update the system:
-+
-
-----
-transactional-update
-----
-
-. If updates were applied reboot.
-
-. This step is optional.
-  However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
-** For more information, see [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container volumes.
-
-** Use the command in the following manner:
-+
-
-----
-mgr-storage-proxy <storage-disk-device>
-----
-+
-For example:
-+
-----
-mgr-storage-proxy /dev/nvme1n1
-----
-+
-[NOTE]
-====
-This command will move the persistent storage volumes at [path]``/var/lib/containers/storage/volumes`` to the specified storage device.
-
-For more information, see
-
-* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
-* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
-====
+include::../register-proxy-suma.adoc[]
 
 
-
-== Create an Activation Key for the Proxy
-
-On the {productname} server, create an activation key for the Proxy.
-
-.Task: Create an Activation Key
-. Navigate to menu:Systems[Activation Keys], and click btn:[Create key].
-. Create an activation key for the proxy host with {sle-micro} {microversion} as the parent channel.
-  This key should include all recommended channels and the Proxy as an extension child channel.
-. Proceed to boostrapping the proxy host as a minion.
-
-
-
-== Bootstrap the Proxy Host
-
-.Task: Bootstrap the Proxy Host
-. Select menu:Systems[Bootstrapping].
-. Fill in the fields for your proxy host.
-. Select the Activation key created in the previous step from the dropdown.
-. Click btn:[Bootstrap].
-. Wait for the Bootstrap process to complete successfully.
-  Check the menu:Salt[] menu and confirm the {salt} key is listed and accepted.
-. Reboot the proxy host.
-. Select the host from the menu:System[] list and trigger a second reboot after all events are finished to conclude the onboarding.
-
-
-.Task: Update the Proxy Host
-. Select the host from the menu:Systems[] list and apply all patches to update it.
-. Reboot the proxy host.
-
+include::../actkey-bootstrap-proxy-suma.adoc[]
 
 include::../generate_proxy_config.adoc[]
 
