--- a/modules/installation-and-upgrade/pages/container-deployment/transfer_proxy_config.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/transfer_proxy_config.adoc
@@ -5,19 +5,20 @@ This archive needs to be made available on the proxy container host.
 
 
 .Procedure: Copying the Proxy Configuration
-. Copy the files from the Server container to the Server host OS:
+
+. If not already done, copy the configuration archive ([literal]``config.tar.gz``) generated in the previous step from the server container to the server host:
 +
 ----
 mgrctl cp server:/root/config.tar.gz .
 ----
 
-. Next copy the files from the Server host OS to the Proxy host:
+. If not already done, copy the files from the server host to the proxy host:
 +
 ----
 scp config.tar.gz <proxy-FQDN>:/root
 ----
 
-. Install the Proxy with:
+. On the proxy host, install the Proxy with:
 +
 
 ----
