--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -9,28 +9,24 @@ This section contains summary of supported client systems. For a detailed list o
 include::snippets/traditional_client_warning.adoc[]
 
 
-
 [[supported-features-clients]]
 == Supported Client Systems
 
-Supported operating systems for traditional and Salt clients are listed in this table.
+Client operating system is supported by the organization that supplies the operating system.
+The versions and SP levels must be under general support (normal or LTSS) to be supported with {productname}.
+For details on supported product versions, see https://www.suse.com/lifecycle.
 
-The icons in this table indicate:
+
+Supported client operating systems are listed in this table. The icons in the table indicate:
 
 * {check} clients running this operating system are supported by {suse}
 * {cross} clients running this operating system are not supported by {suse}
 * {question} clients are under consideration, and may or may not be supported at a later date.
 
-[NOTE]
-====
-Client operating system versions and SP levels must be under general support (normal or LTSS) to be supported with {productname}.
-For details on supported product versions, see https://www.suse.com/lifecycle.
-====
-
 
 [IMPORTANT]
 ====
-The operating system running on a client is supported by the organization that supplies the operating system.
+When reporting an issue in an old version, customers need to ensure that the client is running the latest maintenance update version of that product.
 ====
 
 [[mgr.support.clients]]
