Backport https://github.com/uyuni-project/uyuni-docs/pull/3595

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -40,8 +40,7 @@ ifeval::[{suma-content} == true]
 **** xref:container-deployment/suma/server-deployment-vmdk-suma.adoc[Server Deployment as Virtual Machine - VMware]
 **** xref:container-deployment/suma/server-air-gapped-deployment-suma.adoc[Air-gapped Deployment]
 **** xref:install-pubcloud.adoc[Public Cloud Deployment]
-
-*** Proxy
+*** xref:install-proxy.adoc[Proxy]
 **** xref:container-deployment/suma/proxy-deployment-suma.adoc[{productname} Proxy Deployment on {sle-micro}]
 **** xref:container-deployment/suma/proxy-deployment-vm-suma.adoc[Proxy Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/suma/proxy-deployment-vmdk-suma.adoc[Proxy Deployment Virtual Machine - VMware]
@@ -73,7 +72,7 @@ ifeval::[{suma-content} == true]
 **** xref:client-intro.adoc[Upgrading Clients]
 endif::[]
 
-** Basic Server Management
+** Basic Server and Proxy Management
 *** xref:container-management/mgradm-yaml-custom-configuration.adoc[Custom YAML Configuration With mgradm]
 *** xref:container-management/start-and-stop-containers.adoc[Starting and Stopping Containers]
 *** xref:container-management/persistent-container-volumes.adoc[Persistent Container Volumes]
