--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -1,5 +1,5 @@
 [[proxy-install-vm]]
-= {productname} {productnumber} Proxy Deployment as a Virtual Machine - KVM
+= {productname} Proxy Deployment as a Virtual Machine - KVM
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -15,8 +15,8 @@ KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox 
 
 [IMPORTANT]
 ====
-The preferred method for deploying {productname} {productnumber} Proxy is to use one of the following available images.
-All tools are included in these images greatly simplifying deployment.
+The preferred method for deploying {productnumber} Proxy is to use one of the following available images.
+All tools are included in these images simplifying deployment.
 ====
 
 Images for {productname} {productnumber} Proxy are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
@@ -65,8 +65,8 @@ If you want to use a production environment and need background information abou
 2+<| KVM Settings
 | Installation Method | Import Existing Disk Image
 | OS:                 | Linux
-| Version:            | {productname}-Proxy.x86_64-5.0.0-Build16.12.qcow2
-| Memory:             | 2 GB
+| Version:            | {productname}-Proxy.x86_64-5.0.0-*.qcow2
+| Memory:             | 2 GB (minimum)
 | CPU's:              | 2
 | Storage Format:     | _.qcow2_ 40 GB (Default) Root Partition
 | Name:               | test-setup
@@ -77,7 +77,7 @@ If you want to use a production environment and need background information abou
 [NOTE]
 ====
 [path]``/var/lib/containers/storage/volumes``
-Minimum 100 GB.  Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
+Minimum 150 GB.  Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
 ====
 
 
@@ -121,97 +121,10 @@ image::root-password.png[]
 
 
 
-== Register {sle-micro} and {productname} {productnumber} Proxy
+include::../register-proxy-suma.adoc[]
 
 
-.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
-. Boot the virtual machine.
-. Log in as `root`.
-. Register {sle-micro} with SCC.
-+
-
-----
-transactional-update register -r <REGCODE> -e <your_email>
-----
-
-. Reboot.
-
-. Register {productname} {productnumber} Proxy with {scclongform}.
-+
-
-----
-transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
-----
-
-. Reboot.
-
-. Update the system:
-+
-
-----
-transactional-update
-----
-
-. If updates were applied reboot.
-
-. This step is optional.
-  However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
-** For more information, see [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container volumes.
-
-** Use the command in the following manner:
-+
-
-----
-mgr-storage-proxy <storage-disk-device>
-----
-+
-For example:
-+
-----
-mgr-storage-proxy /dev/nvme1n1
-----
-+
-[NOTE]
-====
-This command will move the persistent storage volumes at [path]``/var/lib/containers/storage/volumes`` to the specified storage device.
-
-For more information, see
-
-* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
-* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
-====
-
-
-
-== Create an Activation Key for the Proxy
-
-On the {productname} server, create an activation key for the Proxy.
-
-.Task: Create an Activation Key
-. Navigate to menu:Systems[Activation Keys], and click btn:[Create key].
-. Create an activation key for the proxy host with {sle-micro} {microversion} as the parent channel.
-  This key should include all recommended channels and the Proxy as an extension child channel.
-. Proceed to boostrapping the proxy host as a minion.
-
-
-
-== Bootstrap the Proxy Host
-
-.Task: Bootstrap the Proxy Host
-. Select menu:Systems[Bootstrapping].
-. Fill in the fields for your proxy host.
-. Select the Activation key created in the previous step from the dropdown.
-. Click btn:[Bootstrap].
-. Wait for the Bootstrap process to complete successfully.
-  Check the menu:Salt[] menu and confirm the {salt} key is listed and accepted.
-. Reboot the proxy host.
-. Select the host from the menu:System[] list and trigger a second reboot after all events are finished to conclude the onboarding.
-
-
-.Task: Update the Proxy Host
-. Select the host from the menu:Systems[] list and apply all patches to update it.
-. Reboot the proxy host.
+include::../actkey-bootstrap-proxy-suma.adoc[]
 
 
 include::../generate_proxy_config.adoc[]
