--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -3,7 +3,14 @@
 
 To set up the {productname} {smr} environment, you will need to have already installed and configured:
 
+ifeval::[{suma-content} == true]
 * {productname} {smr} Server 4.3 or newer
+endif::[]
+
+ifeval::[{uyuni-content} == true]
+* {productname} {smr} Server
+endif::[]
+
 * one or more {productname} {smr} containerized proxies
 * one or more {productname} build host
 
