--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -25,7 +25,7 @@ Older images will not work.
 
 [IMPORTANT]
 ====
-Containerized workflow not longer implicitly configure DHCP for PXE booting.
+Containerized workflow not longer implicitly configures DHCP for PXE booting.
 See xref:specialized-guides:salt/salt-formula-dhcpd.adoc[] how to use DHCP formula to configure DHCP server.
 
 Without using DHCP formula, make sure your DHCP server has correct PXE booting setting pointing to containerized proxy.
