Tidied up the admonition.

--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -26,10 +26,8 @@ Older images will not work.
 [IMPORTANT]
 ====
 Containerized workflow not longer implicitly configures DHCP for PXE booting.
-See xref:specialized-guides:salt/salt-formula-dhcpd.adoc[] how to use DHCP formula to configure DHCP server.
-
-Without using DHCP formula, make sure your DHCP server has correct PXE booting setting pointing to containerized proxy.
-See below for example.
+Without the formula, make sure your DHCP server has correct PXE booting setting pointing to containerized proxy.
+For more information how to use DHCP formula to configure DHCP server, see xref:specialized-guides:salt/salt-formula-dhcpd.adoc[].
 ====
 
 == Assumptions
