--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -16,13 +16,6 @@ endif::[]
 
 This section covers how to configure your  environment using containerized {productname} Proxy for [systemitem]``Saltboot`` deployment.
 
-
-[IMPORTANT]
-====
-Containerized workflow requires POS images build using {productname} Server 4.3 or newer.
-Older images will not work.
-====
-
 [IMPORTANT]
 ====
 Containerized workflow not longer implicitly configures DHCP for PXE booting.
@@ -30,13 +23,22 @@ Without the formula, make sure your DHCP server has correct PXE booting setting 
 For more information how to use DHCP formula to configure DHCP server, see xref:specialized-guides:salt/salt-formula-dhcpd.adoc[].
 ====
 
-== Assumptions
+== Requirements and assumptions
 
-In this example we are going to use branch id [systemitem]``B0001``.
+ifeval::[{suma-content} == true]
+* Containerized workflow requires POS images build using {productname} Server 4.3 or newer.
+  Older images will not work.
+endif::[]
 
-As a terminal we assume to have one terminal with hardware manufacturer [systemitem]``TerminalOEM`` and model [systemitem]``T1000``.
+ifeval::[{uyuni-content} == true]
+* Containerized workflow requires POS images build using the newest {productname} Server.
+endif::[]
 
-For POS image we assume to have one with name [systemitem]``POS_Image_JeOS7``.
+* In this example we are going to use branch id [systemitem]``B0001``.
+
+* As a terminal we assume to have one terminal with hardware manufacturer [systemitem]``TerminalOEM`` and model [systemitem]``T1000``.
+
+* For POS image we assume to have one with name [systemitem]``POS_Image_JeOS7``.
 
 
 == Create required system groups
@@ -88,6 +90,7 @@ Option [systemitem]``Kernel parameters for the group`` can be used to pass extra
 Last three options are related to how will be newly registered machine visible in {productname} Server.
 
 See xref:retail:retail-terminal-names.adoc[] for explanation of possible configurations.
+
 
 == Comparing containerized and non-containerized workflows
 
