Rephrasing in line with writing guidelines.

--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -89,7 +89,7 @@ Option [systemitem]``Kernel parameters for the group`` can be used to pass extra
 
 Last three options are related to how will be newly registered machine visible in {productname} Server.
 
-See xref:retail:retail-terminal-names.adoc[] for explanation of possible configurations.
+For explanation of possible configurations, see xref:retail:retail-terminal-names.adoc[].
 
 
 == Comparing containerized and non-containerized workflows
