Prodecure tidied up.

--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -23,6 +23,7 @@ Without the formula, make sure your DHCP server has correct PXE booting setting 
 For more information how to use DHCP formula to configure DHCP server, see xref:specialized-guides:salt/salt-formula-dhcpd.adoc[].
 ====
 
+
 == Requirements and assumptions
 
 ifeval::[{suma-content} == true]
@@ -43,24 +44,29 @@ endif::[]
 
 == Create required system groups
 
-Follow guide xref:reference:systems/system-groups.adoc[] to create the system groups:
+.Procedure
+. Create the following three system groups. 
+  For guidelines on how to create the groups, see xref:reference:systems/system-groups.adoc[].
 
-- [systemitem]``TERMINALS``
-- [systemitem]``HWType:TerminalOEM-T1000``
-- [systemitem]``B0001``
-
-First group is generic optional group for collecting all POS terminals. Second group is hardware type group for our POS terminal. Third group is mandatory branch group.
-
+  - [systemitem]``TERMINALS``
+  - [systemitem]``HWType:TerminalOEM-T1000``
+  - [systemitem]``B0001``
++
+The first group is generic optional group for collecting all POS terminals. 
+The second group is hardware type group for our POS terminal. 
+The third group is mandatory branch group.
++
 For more information about {saltboot} groups, see xref:retail:retail-install-setup.adoc[].
-
-We assign [systemitem]``Saltboot Group`` formula to group [systemitem]``B0001`` we just created. With this, our branch group is converted to [systemitem]``Saltboot Group``.
++
+. Assign [systemitem]``Saltboot Group`` formula to group [systemitem]``B0001`` we just created. 
+  This converts the  branch group to [systemitem]``Saltboot Group``.
 
 
 == {saltboot} group
 
 Containerized {productname} {smr} is configured in [systemitem]``Saltboot Group``.
 
-{saltboot} groups are branch groups, system group with [systemitem]``branch id`` as its name, with [systemitem]``Saltboot Group`` formula enabled.
+{saltboot} groups are branch groups, system group with [systemitem]``branch id`` as its name and [systemitem]``Saltboot Group`` formula enabled.
 
 [systemitem]``Saltboot Group`` formula is a successor of [systemitem]``Branch Network formula``, [systemitem]``PXE formula`` and [systemitem]``TFTP formula`` used in regular {productname} {smr} setups.
 
@@ -68,9 +74,11 @@ Name of the [systemitem]``Saltboot Group`` is automatically used as a [systemite
 
 All [systemitem]``Saltboot`` deployed machines though containerized proxy will automatically became members of its [systemitem]``Saltboot group``.
 
-To connect [systemitem]``Saltboot group`` with containerized proxy fill [systemitem]``Image Download Server`` entry with Fully Qualified Domain Name ([literal]``FQDN``) of the containerized proxy.
+To connect [systemitem]``Saltboot group`` with containerized proxy, fill [systemitem]``Image Download Server`` entry with Fully Qualified Domain Name ([literal]``FQDN``) of the containerized proxy.
 
-With this, mandatory configuration is finished. The rest of configuration is optional.
+With this, mandatory configuration is finished. 
+The rest of configuration is optional.
+
 
 === Default boot image
 
@@ -102,7 +110,7 @@ Containerized workflow relies on updated image building in {productname} Server 
 
 Containerized workflow uses new TFTP container which instead of providing files present on the proxy, routes TFTP requests as HTTP requests through local proxy to {productname} Server.
 
-Containerized proxy is not a Salt client, it is not possible to call [systemitem]``image-sync`` state.
+Containerized proxy is not a {salt} client, it is not possible to call [systemitem]``image-sync`` state.
 
 [IMPORTANT]
 ====
