Corrected the wording in the prodecure.

--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -164,7 +164,7 @@ For each pair of ``suite`` and ``component`` the spezification defines a distinc
 .Procedure: Assigning the Repository to a Channel
 . Assign your new repository to your custom channel by navigating to menu:Software[Manage > Channels], clicking the name of your newly created custom channel.
 . Navigate to the [guimenu]``Repositories`` tab, and ensure the repository you want to assign to the channel is checked.
-  Click btn:[Update Repositories].
+  Click btn:[Save Repositories].
 . By default, the synchronization process starts immediately.
 
 For more information about channel synchronization, see xref:administration:custom-channels.adoc#custom-channel-sync[].
