Clarify functionality of CLM package/patch allow filters (bsc#1236234)
Signed-off-by: Pascal Arlt <parlt@suse.com>

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -107,7 +107,7 @@ Each filter has a ``rule`` parameter that can be set to either ``Allow`` or ``De
 The filters are processed like this:
 
 * If a package or patch satisfies a ``Deny`` filter, it is excluded from the result.
-* If a package or patch satisfies an ``Allow`` filter, it is included in the result (even if it was excluded by a ``Deny`` filter).
+* If a package or patch satisfies an ``Allow`` filter, it is included in the result (even if it was excluded by a ``Deny`` filter). ``Allow`` filters for packages only operate on package filters and ``Allow`` filters for patches only operate on patch filters. This means with a package filter you cannot add packages back in that were filtered out through patch filters or vise versa for patches that where filtered out through package filters.
 
 This behavior is useful when you want to exclude large number of packages or patches using a general ``Deny`` filter and "cherry-pick" specific packages or patches with specific ``Allow`` filters.
 
