for clients, use literal micro version 6.1

--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -1,7 +1,7 @@
 [[clients-slmicro]]
 = Registering {sl-micro} Clients
 
-This section contains information about registering clients running {sl-micro} operating system 6.0 {x86_64}, {arm64}, and {zsystems} (s390x).
+This section contains information about registering clients running {sl-micro} operating system {x86_64}, {arm64}, and {zsystems} (s390x).
 
 The {sl-micro} uses transactional updates.
 Transactional updates are atomic (all updates are applied only if all updates succeed) and support rollbacks.
@@ -25,7 +25,7 @@ For the {webui} procedure, you need the following products:
 
 [[slmicro-channels-wizard-61]]
 [cols="1,1", options="header"]
-.{sl-micro} {microversion} Products - WebUI
+.{sl-micro} 6.1 Products - WebUI
 |===
 
 | OS Version
@@ -74,7 +74,7 @@ For this procedure, you need the following products:
 // 6.1 from command line
 [[slmicro-channels-cli-61]]
 [cols="1,1", options="header"]
-.{sl-micro} {microversion} Products - CLI
+.{sl-micro} 6.1 Products - CLI
 |===
 
 | OS Version
