--- a/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleapmicro.adoc
@@ -25,11 +25,11 @@ ifeval::[{suma-content} == true]
 | OS Version
 | Product Name
 
-| {leapmicro} {microversion}
-| {leapmicro} {microversion} {x86_64}
+| {leapmicro} 6.1
+| {leapmicro} 6.1 {x86_64}
 
-| {leapmicro} {microversion}
-| {leapmicro} {microversion} {aarch64}
+| {leapmicro} 6.1
+| {leapmicro} 6.1 {aarch64}
 
 |===
 
@@ -59,7 +59,7 @@ ifeval::[{uyuni-content} == true]
 .{opensuse} Channels - CLI
 |===
 
-| OS Version               | {leapmicro} {microversion}     | {leapmicro} 5.5                    | {leapmicro} 5.4                | {leapmicro} 5.3
+| OS Version               | {leapmicro} 6.1                | {leapmicro}  5.5                   | {leapmicro} 5.4                | {leapmicro} 5.3
 | Base Channel             | opensuse_micro6_1              | opensuse_micro5_5                  | opensuse_micro5_4              | opensuse_micro5_3
 | Client Channel           | opensuse_micro6_1-uyuni-client | opensuse_micro5_5-uyuni-client     | opensuse_micro5_4-uyuni-client | opensuse_micro5_3-uyuni-client
 | SLE Updates Channel      | NA                             | opensuse_micro5_5-sle-updates      | opensuse_micro5_4-sle-updates  | opensuse_micro5_3-sle-updates
