--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -50,13 +50,13 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {cross}
 
-| {sle-micro} 
+| {sle-micro}
 | {check}
 | {cross}
 | {cross}
 | {check}
 
-| {sl-micro} {microversion}, 6.0
+| {sl-micro} 6.1, 6.0
 | {check}
 | {cross}
 | {cross}
