--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -117,21 +117,21 @@ image::root-password.png[]
 
 
 
-== Register {sl-micro} and {productname} {productnumber} Server
+== Register {sle-micro} and {productname} {productnumber} Server
 
 // note for 5.0 backport: 5.0 should have sle-micro
 
 [NOTE]
 ====
-The {sl-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
+The {sle-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
 ====
 
-.Procedure: Registering {sl-micro} and {productname} {productnumber}
+.Procedure: Registering {sle-micro} and {productname} {productnumber}
 . Boot the virtual machine.
 . Log in as `root`.
 +
 // note for 5.0 backport: 5.0 should have sle-micro
-. Register {sl-micro} with SCC.
+. Register {sle-micro} with SCC.
 +
 
 ----
