--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vmdk-suma.adoc
@@ -81,19 +81,19 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 
 [[minimal.susemgr.prep]]
-== Register {sl-micro} and {productname} {productnumber} Server
+== Register {sle-micro} and {productname} {productnumber} Server
 
 Before starting obtain your {productname} Registration Code from {scclongform} - https://scc.suse.com.
 
 [NOTE]
 ====
-The {sl-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
+The {sle-micro} {microversion} entitlement is included within the {productname} entitlement, so it does not require a separate registration code.
 ====
 
-.Procedure: Registering {sl-micro} and {productname} {productnumber}
+.Procedure: Registering {sle-micro} and {productname} {productnumber}
 . Boot the virtual machine.
 . Log in as `root`.
-. Register {sl-micro} with {scc}.
+. Register {sle-micro} with {scc}.
 +
 
 ----
