also in hub context, revert some sl-micro back to sle-micro 5.5

--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -26,8 +26,8 @@ Prepare third party certificates for both the Hub Server and the Peripheral serv
 
 .Procedure: Installing the Hub Server
 
-. Install a container host with {sl-micro}.
-  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
+. Install a container host with {sle-micro}.
+  For more information about {sle-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
 
 . On the container host, deploy {productname} as the hub server using the third party certificate.
   Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
@@ -73,8 +73,8 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.
 
 .Procedure: Installing the hub server
 
-. Install a container host with {sl-micro}.
-  For more information about {sl-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
+. Install a container host with {sle-micro}.
+  For more information about {sle-micro} as a container host, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma#deploy-suma-server-micro[].
 
 . On the container host, deploy {productname} as the hub server.
   Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
