--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc
@@ -27,7 +27,8 @@ Its primary function is to monitor the presence of all running {payg} instances 
 .Procedure: Logging in
 
 . Login to the {productname} Server {webui}.
-The username is **admin** the password will be the **Instance ID** on {aws} EC2.
+  Use the username and password you have defined during the setup with [command]``mgradm install podman``.
+//  The username is **admin** the password will be the **Instance ID** on {aws} EC2.
 
 . Select menu:Admin[Setup Wizard].
 
