--- a/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/azure/payg-azure-webui-configuration.adoc
@@ -26,9 +26,7 @@ Its primary function is to monitor the presence of all running {payg} instances 
 
 .Procedure: Logging in
 . Login to the {productname} Server {webui}.
-  The username is [literal]``admin`` while the password is the name of the instance with [literal]``-suma`` appended.
-  When the name of the instance is [literal]``suma-payg-mycompany``, the password is ``suma-payg-mycompany-suma``.
-
+  Use the username and password you have defined during the setup with [command]``mgradm install podman``.
 . Select menu:Admin[Setup Wizard].
 
 == Configure the {payg} credentials and product list
