set micro version number back to 5.5 (#3666)
* for clients, use literal micro version 6.1
* revert some sl-micro back to sle-micro 5.5
* also in hub context, revert some sl-micro back to sle-micro 5.5
* remove BETA in channel name

--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -1,7 +1,7 @@
 [[clients-slmicro]]
 = Registering {sl-micro} Clients
 
-This section contains information about registering clients running {nbsp}{sl-micro} operating system 6.0 {x86_64}, {arm64}, and {zsystems} (s390x).
+This section contains information about registering clients running {sl-micro} operating system {x86_64}, {arm64}, and {zsystems} (s390x).
 
 The {sl-micro} is an ultra-reliable, lightweight operating system purpose built for edge computing.
 It leverages the enterprise hardened security and compliance components of SUSE Linux Enterprise and merges them with a modern, immutable, developer-friendly OS platform.
@@ -27,7 +27,7 @@ The products you need for this procedure are:
 
 [[slmicro-channels-wizard-61]]
 [cols="1,1", options="header"]
-.{sl-micro} {microversion} Products - WebUI
+.{sl-micro} 6.1 Products - WebUI
 |===
 
 | OS Version
@@ -75,7 +75,7 @@ The channels you need for this procedure are:
 // 6.1 from command line
 [[slmicro-channels-cli-61]]
 [cols="1,1", options="header"]
-.{sl-micro} {microversion} Products - CLI
+.{sl-micro} 6.1 Products - CLI
 |===
 
 | OS Version
