for regular clients, use literal version strings https://github.com/SUSE/spacewalk/issues/26336

--- a/modules/client-configuration/pages/clients-slmicro.adoc
+++ b/modules/client-configuration/pages/clients-slmicro.adoc
@@ -25,7 +25,7 @@ For the {webui} procedure, you need the following products:
 
 [[slmicro-channels-wizard-61]]
 [cols="1,1", options="header"]
-.{sl-micro} {microversion} Products - WebUI
+.{sl-micro} 6.1 Products - WebUI
 |===
 
 | OS Version
@@ -74,7 +74,7 @@ For this procedure, you need the following products:
 // 6.1 from command line
 [[slmicro-channels-cli-61]]
 [cols="1,1", options="header"]
-.{sl-micro} {microversion} Products - CLI
+.{sl-micro} 6.1 Products - CLI
 |===
 
 | OS Version
