in parallel with proxy, create install-server nav help

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -23,7 +23,7 @@ endif::[]
 
 ifeval::[{uyuni-content} == true]
 ** Deployment and Installation
-*** Server
+*** xref:install-server.adoc[Server]
 **** xref:container-deployment/uyuni/server-deployment-uyuni.adoc[Server Deployment on {leapmicro}]
 **** xref:container-deployment/uyuni/server-air-gapped-deployment-uyuni.adoc[Air-gapped Deployment]
 *** xref:install-proxy.adoc[Proxy]
@@ -34,7 +34,7 @@ endif::[]
 
 ifeval::[{suma-content} == true]
 ** Installation and Deployment
-*** Server
+*** xref:install-server.adoc[Server]
 **** xref:container-deployment/suma/server-deployment-suma.adoc[{productname} Deployment on {sle-micro}]
 **** xref:container-deployment/suma/server-deployment-vm-suma.adoc[Server Deployment as Virtual Machine - KVM]
 **** xref:container-deployment/suma/server-deployment-vmdk-suma.adoc[Server Deployment as Virtual Machine - VMware]
