--- a/modules/administration/pages/space-management.adoc
+++ b/modules/administration/pages/space-management.adoc
@@ -29,7 +29,7 @@ For example:
 spacecheck_dirs = /var/lib/pgsql /var/spacewalk /var/cache /srv
 ----
 
-For more information about volumes, see https://documentation.suse.com/suma/5.0/en/suse-manager/installation-and-upgrade/container-management/persistent-container-volumes.html.
+For more information about volumes, see https://documentation.suse.com/multi-linux-manager/5.1/en/suse-manager/installation-and-upgrade/container-management/persistent-container-volumes.html.
 
 
 == Thresholds
