--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-suma.adoc
@@ -51,8 +51,8 @@ An FQDN typically follows the format <host>.<domain>.com.
 
 For instance:
 
-* [literal]``suma.example.com``
-* [literal]``suma.container.lab``
+* [literal]``{productname}.example.com``
+* [literal]``{productname}.container.lab``
 
 For more information, see the section on network requirements in xref:installation-and-upgrade:network-requirements.adoc[].
 ====
@@ -238,11 +238,11 @@ For more information, see
 
 .Procedure: Deploying {productname} {productnumber} Using [literal]``mgradm``
 . Log in as root.
-. Execute the following command, replacing `<suma.example.com>` with your fully qualified domain name:
+. Execute the following command, replacing `<multi-linux-manager.example.com>` with your fully qualified domain name:
 +
 [source,shell]
 ----
-mgradm install podman <suma.example.com>
+mgradm install podman <{productname}.example.com>
 ----
 +
 
