--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -309,7 +309,7 @@ If an Enterprise Linux (EL) client such as RHEL and all clones (like {centos}, {
 For more information about re-activation keys, see xref:client-configuration:activation-keys.adoc#activation-keys-reactivation[].
 
 The re-activation key is per minion, and can be generated with the {webui} or using the API.
-For more information, see https://documentation.suse.com/suma/5.0/api/suse-manager/api/system.html#apidoc-system-obtainReactivationKey-loggedInUser-sid.
+For more information, see https://documentation.suse.com/multi-linux-manager/5.1/api/suse-manager/api/system.html#apidoc-system-obtainReactivationKey-loggedInUser-sid.
 
 To re-activate a client, the user can run the bootstrap script on the client and pass the re-activation key as an environment variable.  Example:
 
